--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
+    "next": "^13.4.8",
     "prettier": "^2.5.1",
     "turbo": "^1.9.3"
   },
