--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-custom",
+  "name": "@jumba-oss/eslint",
   "license": "MIT",
   "version": "0.0.0",
   "private": true,
