build: updated workspace config

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "jumba-oss",
   "private": true,
   "scripts": {
     "build": "turbo run build",
@@ -9,9 +10,8 @@
   "devDependencies": {
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
-    "tsconfig": "workspace:*",
+    "@jumba-oss/tsconfig": "workspace:*",
     "turbo": "latest"
   },
-  "packageManager": "pnpm@8.6.10",
-  "name": "oss"
+  "packageManager": "pnpm@8.6.10"
 }
