build: updated workspace deps

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jumba-oss",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
@@ -13,11 +16,17 @@
     "@commitlint/cli": "^18.0.0",
     "@commitlint/config-conventional": "^18.0.0",
     "@jumba-oss/tsconfig": "workspace:*",
+    "@types/node": "^20.8.7",
     "eslint": "^8.48.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.3",
     "turbo": "latest",
     "typescript": "^5.2.2"
   },
-  "packageManager": "pnpm@8.6.10"
+  "packageManager": "pnpm@8.6.10",
+  "dependencies": {
+    "@faker-js/faker": "^8.2.0",
+    "node-fetch": "^3.3.2",
+    "zod": "^3.22.4"
+  }
 }
