--- a/packages/access-analyzer/package.json
+++ b/packages/access-analyzer/package.json
@@ -22,6 +22,7 @@
     "@aws-sdk/client-cognito-identity": "^3.433.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.433.0",
     "@aws-sdk/client-dynamodb": "^3.433.0",
+    "@aws-sdk/util-dynamodb": "^3.433.0",
     "@smithy/protocol-http": "^3.0.8",
     "@smithy/signature-v4": "^2.0.12"
   }
