--- a/packages/access-analyzer/package.json
+++ b/packages/access-analyzer/package.json
@@ -9,7 +9,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://registry.npmjs.org/"
   },
   "files": [
     "dist",
