build: updated package config

--- a/packages/access-analyzer/package.json
+++ b/packages/access-analyzer/package.json
@@ -7,6 +7,14 @@
   "scripts": {
     "build": "tsc"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "keywords": [
     "amplify",
     "appsync",
