--- a/packages/amplify-nextjs/tsconfig.json
+++ b/packages/amplify-nextjs/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "dist",
     "module": "ESNext",
     "target": "ESNext",
-    "jsx": "preserve",
+    "jsx": "react",
     "lib": ["dom", "dom.iterable", "esnext"]
   },
   "include": ["src/**/*"]
