--- a/packages/lambda-utils/package.json
+++ b/packages/lambda-utils/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/client-ssm": "^3.454.0",
     "@aws-sdk/credential-provider-node": "^3.451.0",
     "@aws-sdk/util-dynamodb": "^3.433.0",
     "@smithy/protocol-http": "^3.0.8",
