feat: added route change transition state

--- a/packages/amplify-nextjs/tsconfig.json
+++ b/packages/amplify-nextjs/tsconfig.json
@@ -5,6 +5,11 @@
     "module": "ESNext",
     "target": "ESNext",
     "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "./": ["dist/index.js"],
+      "./auth": ["dist/auth.js"]
+    },
     "lib": ["dom", "dom.iterable", "esnext"]
   },
   "include": ["src/**/*"]
