--- a/packages/amplify-nextjs/tsconfig.json
+++ b/packages/amplify-nextjs/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@jumba-oss/tsconfig/base",
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": ".",
     "module": "ESNext",
     "target": "ESNext",
     "jsx": "react",
