--- a/packages/lambda-utils/package.json
+++ b/packages/lambda-utils/package.json
@@ -29,12 +29,12 @@
   "author": "Jumba Developers",
   "license": "MIT",
   "dependencies": {
-    "@aws-crypto/sha256-js": "^5.2.0",
-    "@aws-sdk/client-ssm": "^3.454.0",
-    "@aws-sdk/credential-provider-node": "^3.451.0",
-    "@aws-sdk/util-dynamodb": "^3.433.0",
-    "@smithy/protocol-http": "^3.0.8",
-    "@smithy/signature-v4": "^2.0.12",
+    "@aws-crypto/sha256-js": "5.2.0",
+    "@aws-sdk/client-ssm": "3.454.0",
+    "@aws-sdk/credential-provider-node": "3.451.0",
+    "@aws-sdk/util-dynamodb": "3.433.0",
+    "@smithy/protocol-http": "3.0.8",
+    "@smithy/signature-v4": "2.0.12",
     "node-fetch": "2"
   },
   "devDependencies": {
