--- a/www/package.json
+++ b/www/package.json
@@ -21,7 +21,9 @@
     "nextra": "^2.13.2",
     "nextra-theme-docs": "^2.13.2",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.4",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
