chore: cleanup carousel

--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^2.40.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
