--- a/packages/lambda-utils/package.json
+++ b/packages/lambda-utils/package.json
@@ -41,5 +41,8 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.126",
     "aws-lambda": "^1.0.7"
+  },
+  "peerDependencies": {
+    "@sentry/aws-serverless": "^8.37.1"
   }
 }
