--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ci:version": "pnpm changeset version"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^18.0.0",
     "@commitlint/config-conventional": "^18.0.0",
